--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@notionhq/client": "^2.1.1",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "helmet": "^5.1.1"
   },
   "scripts": {
     "start": "node server.js",
